--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,9 @@
                 Descripcion del post super increible
             </p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi &lt;3
+            </div>
     </div>
 </body>
 
